modified testimonials section

--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
         </div>
     </div>
 
-    <div class="client"> CLIENT TESTIMONIALS</div>
+    <div class="client"> CLIENT TESTIMONIALS AND REVIEWS</div>
 
     <div class="testimonials">
 
